# LuminUserService

./: .dockerignore  README.md  pyproject.toml  requirements.txt
app/: create_taskiq_streams.py  main.py
app/application/commands/: activate.py  block.py  change_avatar_url.py  change_bio.py  change_date.py  change_email.py  change_language_code.py  change_phone.py  change_privacy_settings.py  change_username.py  create.py  deactivate.py  delete.py  record_profile_view.py
app/application/queries/: get_by_id.py
app/application/services/: user_service.py
app/application/taskiq/: user_commands.py
app/domain/: exceptions.py
app/domain/events/: domain_event.py  event_bus.py  user_events.py
app/domain/models/aggregates/: aggregate_root.py  user.py
app/domain/models/common/: value_objects.py
app/domain/models/entities/: base_entity.py  profile_view.py
app/domain/repositories/: data_mapper.py  identity_map.py  reposiotries.py  unit_of_work.py
app/infrastructure/: dependency_container.py
app/infrastructure/cache/: multi_level_cache.py  redis_cache.py
app/infrastructure/messaging/: nats_event_bus.py
app/infrastructure/migrations/alembic/: alembic.ini
app/infrastructure/persistanse/: database.py  identity_map.py  models.py  postgres_sql_user_repository.py  pydantic_models.py  unit_of_work.py  user_mapper.py
app/infrastructure/tasks/: taskiq_broker.py  taskiq_service.py  taskiq_tasks.py
app/presentation/api/: controllers.py  main.py
tests/: conftests.py
tests/fixtures/: user_fixtures.py
tests/unit/application/: test_commands.py
tests/unit/domain/: test_aggregate_user.py
