[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumin-user-service"
version = "0.1.0"
description = "User management microservice with DDD/CQRS/Event Sourcing"
readme = "README.md"
authors = [
    {name = "Lumin Team", email = "team@lumin.example.com"}
]
license = {text = "Apache License"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "litestar[standard]>=2.0.0",
    "asyncpg>=0.29.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.12.0",
    "taskiq>=0.10.0",
    "taskiq-nats>=0.1.0",
    "nats-py>=2.0.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ipdb>=0.13.0",
    "jupyter>=1.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.23.0",
]

docker = [
    "docker>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/lumin-user-service"
Documentation = "https://lumin-user-service.readthedocs.io"
Repository = "https://github.com/yourusername/lumin-user-service"
Issues = "https://github.com/yourusername/lumin-user-service/issues"
Changelog = "https://github.com/yourusername/lumin-user-service/releases"

[project.scripts]
lumin-user-service = "LuminUserService.app.main:main"
lumin-worker = "LuminUserService.worker:main"
lumin-migrate = "LuminUserService.cli.migrate:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_sort_within_sections = true
known_first_party = ["LuminUserService"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "litestar.*",
    "pydantic.*",
    "sqlalchemy.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=LuminUserService",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--asyncio-mode=auto"
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["LuminUserService"]
omit = [
    "LuminUserService/tests/*",
    "LuminUserService/migrations/*",
    "LuminUserService/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
[tool.setuptools.packages.find]
where = ["."]
include = ["LuminUserService*"]
exclude = ["tests*", "docs*", "migrations*", "scripts*"]
[tool.setuptools.package-dir]
"" = "."
[project.entry-points."taskiq.scheduler_sources"]
lumin = "LuminUserService.infrastructure.tasks.scheduler:get_scheduler_source"
[project.entry-points."console_scripts"]
lumin-cli = "LuminUserService.cli.main:cli"